# piccolo-spritesheet-model

./: .gitignore  README.md  eval.py  inference.py  prepare.py  program.md  pyproject.toml  release.py  train.py
docs/: IDEA.md
docs/superpowers/plans/: 2026-05-17-piccolo-spritesheet.md  2026-05-18-release-inference.md
docs/superpowers/specs/: 2026-05-18-release-inference-design.md
tests/: test_eval.py  test_inference.py  test_prepare.py  test_release.py  test_train.py
