[project]
name = "piccolo-spritesheet"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "einops>=0.7.0",
    "requests>=2.31.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
